# moveit2_learn

./: .gitignore
.cache/clangd/index/: BenchmarkExecutor.cpp.C47E448FA63A9FE5.idx  BenchmarkExecutor.hpp.1AFC297E137488E0.idx  BenchmarkOptions.cpp.12CC2CD68CB7F6F9.idx  BenchmarkOptions.hpp.86F63578F4D3CF57.idx  ControllerHandle.hpp.172E9CC3CA2B9CA5.idx  GreedyKCenters.hpp.B5A621F78E0901A9.idx  NearestNeighbors.hpp.CBDC17BBE3E55B3F.idx  NearestNeighborsGNAT.hpp.AC774FC1421EC3B8.idx  RunBenchmark.cpp.A9F17400D3BD2B06.idx  aabb.cpp.765DDFC8C1A1E66B.idx  aabb.hpp.77E2B8439E1EA02C.idx  acceleration_filter.cpp.E7BE5AEED67EFD5C.idx  acceleration_filter.hpp.8360824BBB52AD28.idx  action_based_controller_handle.hpp.D342B647A22837B9.idx  action_based_controller_handle.hpp.DFE3BF7995C172CC.idx  add_ruckig_traj_smoothing.cpp.8FE6B89A2A564B60.idx  add_time_optimal_parameterization.cpp.052B5A3A84756F8E.idx  allowed_collision_entry__struct.hpp.F84683285C5AF819.idx  allowed_collision_entry__traits.hpp.F7D57213B5D957D4.idx  allowed_collision_matrix.hpp.8AE32EAAA7C94CC7.idx  allowed_collision_matrix__builder.hpp.8F2AFBBBD4D5BEB4.idx  allowed_collision_matrix__struct.hpp.4B4A7FC2600AE55A.idx  allowed_collision_matrix__traits.hpp.43EFD12FA95E8BBA.idx  allowed_collision_matrix__type_support.hpp.045AA2E1C0D62F2C.idx  (+1633 more)
install/: local_setup.sh  setup.sh
log/: latest_build
notebook/: moveit.md  note.md
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/launch/: deeply_learn.launch.py
src/hello_moveit/src/: Obstacle_avoidance_planning.cpp  deeply_learn.cpp  hello_moveit.cpp
(+306 files in other folders)
